[package]
name = "graphql_example"
version = "0.1.0"
authors = ["k-nasa <htilcs1115@gmail.com>"]
edition = "2018"

[dependencies]
actix-web = "1.0.0-alpha.4"
env_logger = "0.6"
futures="*"
log = "0.4.0"
juniper = "0.9.2"
serde_json = "*"
chrono = "0.4.6"
failure = "0.1"
scraper = "0.9"
reqwest = "0.9"
